Revision history for Perl extension Coro.

TODO: should explore PerlIO::via::CoroCede and PerlIO::via::CoroAIO.
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

4.72 Sun May 25 05:14:36 CEST 2008
      	- tweak META.yaml a bit, unfortunately, there is no documented way
          to have optional dependencies with CPAN. doh :(
	- avoid running some tests on windows because they would fail due to
          perl bug (broken fork, broken pipes...).
        - work around perl on windows bugs where perl returns undocumented
          error codes for sysread, syswrite etc. by taking advantage
          of AnyEvent's workaround for that problem.
        - use AnyEvent::Util::fh_nonblocking in Coro::Handle to work around
          a common perl implementation bug on windows.
        - use unix domain sockets in testsuite to work around
          common perl implementation bugs on widows (they are emulated by
          tcp sockets on windows. ugh.)

4.71 Sat May 24 20:01:27 CEST 2008
      	- fix a bug in Coro::AnyEvent ("Usage: Coro::AnyEvent::_schedule()").
	- take advantage of async name resolution of AnyEvent::Util.
        - work around brutal inet_aton override in Coro::LWP.
        - take advantage of the readyhook in Coro::EV, for smoother
          scheduling.

4.7  Sun May 11 00:32:19 CEST 2008
	- completely reworked the Coro manpage.
      	- added Coro::AnyEvent, generic event loop integration.
	- implement cancel, ready and kill commands in Coro::Debug.
        - document find_coro in Coro::Debug.
        - incompatible change: rename has_stack to has_cctx.
        - Coro::AIO and Coro::BDB no longer force event model detection,
          use AnyEvent::AIO and AnyEvent::BDB.

4.6  Sat Apr 26 10:05:14 CEST 2008
	- INCOMPATIBLE CHANGE: sub/code attributes are no longer supported