@@ -20,9 +20,8 @@ documentation to see how to integrate it into your own programs.
 
 package Coro::Util;
 
+no warnings;
 use strict;
-
-no warnings "uninitialized";
 
 use Socket ();
 
