@@ -5,6 +5,9 @@ TODO: maybe implement a default message channel, very much like Erlang's
       actor model (which is cool in a lot of important aspects (failures!),
       but very lacking in others (higher level ipc)).
 
+	- sprinkle "no warnings" freely over everything, also suppress
+          warnings for some other modules.
+
 4.72 Sun May 25 05:14:36 CEST 2008
       	- tweak META.yaml a bit, unfortunately, there is no documented way
           to have optional dependencies with CPAN. doh :(
